call-center/src/objects/Payment_Method__c.object
<CustomObject>
    <description>Details about a method of payment: credit card, ACH, check, or cash.</description>
    <fields>
        <fullName>Account_Number__c</fullName>
        <description>Bank account number</description>
        <label>Account Number</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Card_Holder_Name__c</fullName>
        <description>Name of the card Holder</description>
        <label>Card Holder Name</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Type__c</fullName>
        <description>Type of Credit card used</description>
        <label>Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visa</fullName>
                </value>
                <value>
                    <fullName>MasterCard</fullName>
                </value>
                <value>
                    <fullName>Discover</fullName>
                </value>
                <value>
                    <fullName>American Express</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <formula>TEXT(Type__c) &amp;
CASE(Type__c,
&quot;Credit Card&quot;,  &quot; &quot; &amp; TEXT(Card_Type__c) &amp; &quot;-&quot; &amp;  Last_4__c,
&quot;ACH&quot;, &quot; &quot; &amp; TEXT(Account_Number__c),
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>MM/YY (i.e. 02/16)</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Guarantor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Guarantor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Guarantor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Credit_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <externalId>true</externalId>
        <label>ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_4__c</fullName>
        <label>Last 4</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method_Token__c</fullName>
        <label>Payment Method Token</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routing_Number__c</fullName>
        <description>The MICR routing number consists of 9 digits: &quot;XXXXYYYYC&quot;  where XXXX is Federal Reserve Routing Symbol, YYYY is ABA Institution Identifier, and C is the Check Digit.</description>
        <inlineHelpText>for ACH</inlineHelpText>
        <label>Routing Number</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sirono_Id__c</fullName>
        <externalId>true</externalId>
        <label>Sirono ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Payment Method</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Guarantor__c</columns>
        <columns>Last_4__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Methods</pluralLabel>
    <recordTypes>
        <fullName>ACH</fullName>
        <active>true</active>
        <label>ACH</label>
    </recordTypes>
    <recordTypes>
        <fullName>Check_Cash</fullName>
        <active>true</active>
        <label>Check/Cash</label>
    </recordTypes>
    <recordTypes>
        <fullName>Credit_Card</fullName>
        <active>true</active>
        <label>Credit Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>Promise</fullName>
        <active>false</active>
        <label>Promise</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>